Imagem Responsive - Modal

--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
         <div class="modal-content">
             <h4>Exibição de Detalhes</h4>
             <div class="row center-align">
-                <img class="center-align" id="img" src="https://t.tudocdn.net/143300?w=646&h=284">
+                <img class="center-align responsive-img" id="img" src="https://t.tudocdn.net/143300?w=646&h=284">
             </div>
             <div class="row">
                 <strong>Data Hora</strong>
